--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <body>
   <main>
   <article>
-  <h1>Hello world!</h1>
+  <h1>Muhahahahaha</h1>
+    <h2>I am making changes to this</h2>
   <p><a href="swatches.html">UCLA color palette</a></p>
   </article>
 </main>
