--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <main>
   <article>
-  <h1>Hello world!</h1>
+  <h1>Will this work?!</h1>
   <p><a href="swatches.html">UCLA color palette</a></p>
   </article>
 </main>
