--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <article>
   <h1>Muhahahahaha</h1>
     <h2>I am making changes to this</h2>
+    <p>99 bottles of pop on the wall</p>
+    <p>i am making more changes</p>
   <p><a href="swatches.html">UCLA color palette</a></p>
   </article>
 </main>
