--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <main>
   <article>
   <h1>Will this work?!</h1>
+    <p>yatatatatatatata</p>
   <p><a href="swatches.html">UCLA color palette</a></p>
   </article>
 </main>
